Add strength training exercises to training.html
Added detailed strength training exercises for various body parts including abs, arms, legs, and shoulders.

--- a/html/training.html
+++ b/html/training.html
@@ -16,6 +16,66 @@
 <h1>Climbing Training (Mainly Strength Lists)</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<h2>ABS</h2>
+ <p>3x10 Lever Pulls</p>
+ <p>3x5 5 second lever pull ISOs</p>
+ <p>100 in 3 sets V ups</p>
+ <p>120 in 3 sets in n outs</p>
+ <p>150 in 3 sets Hanging crunches</p>
+ <p>3x10 leg lifts</p>
+ <p>2x25 oblique V ups</p>
+ <p>2 max hollow hold (goal 3 min)</p>
+<br>
+
+<h2>ARMS</h2>
+ <p>5 one arm pull ups</p>
+ <p>3x15 pullups</p>
+ <p>5x(10s iso top lock to iso 90 lock)</p>
+ <p>3x10 behing head pullups</p>
+ <p>2 dead hang cycles (1min both, 30s R, 30s L, 1min both</p>
+ <p>1 max dead hang</p>
+<br>
+
+<h2>Legs</h2>
+ <p>3x7 pistol squats</p>
+ <p>2x10 pistol squat rolls</p>
+ <p>10' toe walks</p>
+ <p>50 weighted hinge squats</p>
+ <p>50 calf raises ||, /\, \/</p>
+ <p>2x10 side leg raises</p>
+ <p>hip flexor alphabet each leg</p>
+<br>
+
+<h2>Campus Board</h2>
+ <p>2 1x ladder up/down</p>
+ <p>2 2x ladder up/down</p>
+
+<h2>Climbing antagonist</h2>
+ <p>pushups</p>
+ <p>flies</p>
+ <p>maltese rows</p>
+ <p>handstand pushups</p>
+ <p>handstand shrugs</p>
+<br>
+
+<h2>ankle PT</h2>
+ <p>2x10 bungee dorsiflexion</p>
+ <p>2x10 bungee plantarflexion</p>
+ <p>2x10 bungee eversion</p>
+ <p>2x10 bungee iversion</p>
+ <p>2x5 asymmetric weighted pistol squat on soft surface</p>
+<br>
+
+<h2>shoulder PT</h2>
+ <p>10s wall ISOs ER/IR/AB/AD</p>
+ <p>5lb warmups</p>
+ <p>2x10 bungee shrugs up/down</p>
+ <p>2x10 bungee ER/IR/AD/AD/FLX/EXT</p>
+ <p>2x7 bungee flies/maltese/rows front and back</p>
+ <p>2x10 90 degree flies </p>
+ <p>2x7 hinge pushsups</p>
+<br>
+
  </body>
 </center>
 </html>
