--- a/html/training.html
+++ b/html/training.html
@@ -13,7 +13,7 @@
 
 <center>
 
-<h1>Climbing Training (Mainly Strength Lists)</h1>
+<h1>Climbing Training (Strength and PT)</h1>
 <style>h1 {text-decoration: underline;}</style>
 
 <h2>ABS</h2>
@@ -49,6 +49,7 @@
 <h2>Campus Board</h2>
  <p>2 1x ladder up/down</p>
  <p>2 2x ladder up/down</p>
+<br>
 
 <h2>Climbing antagonist</h2>
  <p>pushups</p>
