Update index.html to include fishing section
Added a new link for fishing activities and updated the HTML structure.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 </a>
 <h2>Click Here! for Climbing stuff</h2><br>
 
+<a href="/html/fishing.html">
+	<img src="/images/fishing.PNG" alt="logo" style="width:500px;height:500px;">
+</a>
+<h2>Fishing Fun!</h2><br>
 
 <a href="/html/trips/trips.html">
 	<img src="/images/earth.PNG" alt="logo" style="width:500px;height:500px;">
@@ -61,6 +65,7 @@
 
 </center>
  </html>
+
 
 
 
