Update Santee image link and source in cacrags.html

--- a/html/cacrags.html
+++ b/html/cacrags.html
@@ -15,8 +15,8 @@
 <h1>Welcome to The Arizona Crags Page</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<a href="/html/azcrags/pdraw.html">
-<img src="/images/crags/santee.png" alt="logo" style="width:400px;height:400px;">
+<a href="/html/cacrags/santee.html">
+<img src="/images/crags/santee.jpg" alt="logo" style="width:400px;height:610px;">
 </a>
 <h2>Santee Boulders</h2>
 <br>
