--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -3,7 +3,35 @@
 <center>
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
- 
+
+<br>
+<img src="/images/mastergarbage/smoling.jpg" alt="logo" style="width:320px;height:190px;">
+<p>reddit trash:"Parlie and Chim"</p>
+<p>12/27/2025 @ 01:21</p>
+<br>
+<img src="/images/mastergarbage/kenos.jpg" alt="logo" style="width:400px;height:430px;">
+<p>surfing:"board made with Capn Kenos bar wood"</p>
+<p>12/27/2025 @ 01:21</p>
+<br>
+<img src="/images/mastergarbage/squigame.jpg" alt="logo" style="width:400px;height:500px;">
+<p>drinking:"ok cool"</p>
+<p>12/14/2025 @ 21:21</p>
+<br>
+<img src="/images/mastergarbage/slurpee.jpg" alt="logo" style="width:400px;height:450px;">
+<p>man we live in a society:"ok cool"</p>
+<p>12/12/2025 @ 03:21</p>
+<br>
+<img src="/images/mastergarbage/pas.jpg" alt="logo" style="width:400px;height:500px;">
+<p>climbing:"Petzl has hired a hitman"</p>
+<p>12/2/2025 @ 00:17</p>
+<br>
+<img src="/images/mastergarbage/frog.jpg" alt="logo" style="width:400px;height:300px;">
+<p>"they found him"</p>
+<p>11/30/2025 @ 12:17</p>
+<br>
+<img src="/images/mastergarbage/wzard.jpg" alt="logo" style="width:400px;height:300px;">
+<p>climbing:"commercial gyms are a joke"</p>
+<p>11/27/2025 @ 9:43</p>
 <br>
 <img src="/images/mastergarbage/hamlim.png" alt="logo" style="width:400px;height:400px;">
 <p>heathcliff:"ham limit"</p>
@@ -29,6 +57,7 @@
 </center>
 
  </html>
+
 
 
 
