--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,5 +1,5 @@
 <html>
-<meta http-equiv="refresh" content="3; URL=https://az.rock-n-rowl.com/" />
+<meta http-equiv="refresh" content="3; URL=https://chalkednloaded.shredsurf.com/" />
 <center>
 <img src="/images/escropebw.gif" alt="logo" style="width:850px;height:850px;">
 </center>
