--- a/html/thinking.html
+++ b/html/thinking.html
@@ -14,12 +14,23 @@
 
 <h1>Stuff I like to Think About and Things Have Thoughts on</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>"Gotta let the brain breathe or just leak out sometimes"</p>
 
 <br>
-  
+
+<a href="/html/2024.html">
+	<p>2024</p>
+</a>
+<a href="/html/2025.html">
+	<p>2025</p>
+</a>
+<a href="/html/2026.html">
+	<p>2026</p>
+</a>
+
+<br>
+	
 <a href="/html/lifeidioms.html">
-	<h2>If you doodoo on yourself... and I live by that</h2>
+	<p>If you doodoo on yourself... and I live by that</p>
 </a>
 
 <br>
