Update links to point to years subdirectory

--- a/html/thinking.html
+++ b/html/thinking.html
@@ -17,13 +17,13 @@
 
 <br>
 
-<a href="/html/2024.html">
+<a href="/html/years/2024.html">
 	<p>2024</p>
 </a>
-<a href="/html/2025.html">
+<a href="/html/years/2025.html">
 	<p>2025</p>
 </a>
-<a href="/html/2026.html">
+<a href="/html/years/2026.html">
 	<p>2026</p>
 </a>
 
