Update 2024 page title and add totals section

--- a/html/years/2024.html
+++ b/html/years/2024.html
@@ -12,27 +12,16 @@
 </div>
 <center>
 
-<h1>Welcome to The Arizona Crags Page</h1>
+<h1>2024: Goals and Totals</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<a href="/html/cacrags/santee.html">
-<img src="/images/crags/santee.jpg" alt="logo" style="width:400px;height:610px;">
-</a>
-<h2>Santee Boulders</h2>
-<br>
-
-
-
+<h2>The Totals:</h2>
+<p>Times I Climbed: </p>
+<p>Days I Surfed: </p>
+<p>Times I Dove: </p>
+<p>Standard Drinks: </p>
+<p>Bowls Smoked: </p>
 
 </center>
 
  </html>
-
-
-
-
-
-
-
-
-
