--- a/html/years/2025.html
+++ b/html/years/2025.html
@@ -15,12 +15,17 @@
 <h1>2025: Goals and Totals</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<h2>Goals:</h2>
+<s>Send V10 (12/19/25)</s>
+<s>watch every sunset</s>
+<p>run a sub 5 mile (best was 5:08)</p>
+<br>
 <h2>The Totals:</h2>
-<p>Times I Climbed: </p>
-<p>Days I Surfed: </p>
-<p>Times I Dove: </p>
-<p>Standard Drinks: </p>
-<p>Bowls Smoked: </p>
+<p>Times I Climbed: 102</p>
+<p>Surf Sessions: 86</p>
+<p>Times I Dove: 46</p>
+<p>Standard Drinks: 1236 ≃ 5.8 Gallons of Pure Ethanol</p>
+<p>Bowls Smoked: 498 ≃ 0.55 Lbs of Weed</p>
 
 </center>
 
