--- a/html/years/2026.html
+++ b/html/years/2026.html
@@ -15,12 +15,20 @@
 <h1>2026: Goals, Rules, and Totals</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<h2>The Totals:</h2>
-<p>Times I Climbed: </p>
-<p>Days I Surfed: </p>
-<p>Times I Dove: </p>
-<p>Standard Drinks: </p>
-<p>Bowls Smoked: </p>
+<h2>The Goals:</h2>
+<p>Complete the Pima Punisher</p>
+<p>1000 Fresh V points</p>
+<p>Bowl a clean game</p>
+<p>Run a sub 5 min mile</p>
+
+   <br>
+
+<h2>The Rules:</h2>
+<p>Each fressh V point earns 1 drink</p>
+<p>No phone while driving</p>
+<p>No technology for 30 min after waking up</p>
+<p>Antagonist list every other week</p>
+
 
 </center>
 
