--- a/html/years/2026.html
+++ b/html/years/2026.html
@@ -16,7 +16,8 @@
 <style>h1 {text-decoration: underline;}</style>
 
 <h2>The Goals:</h2>
-<p>Complete the Pima Punisher</p>
+
+<p>Complete the <a href="/html/2026goals/pimapunisher.html">Pima Punisher</a></p>
 <p>1000 Fresh V points</p>
 <p>Bowl a clean game</p>
 <p>Run a sub 5 min mile</p>
