--- a/html/years/2026.html
+++ b/html/years/2026.html
@@ -18,7 +18,7 @@
 <h2>The Goals:</h2>
 
 <p>Complete the <a href="/html/2026goals/pimapunisher.html">Pima Punisher</a></p>
-<p>1000 Fresh V points</p>
+<p><a href="/html/2026goals/2026vpoint.html">1000 Fresh V points</a></p>
 <p>Bowl a clean game</p>
 <p>Run a sub 5 min mile</p>
 
