--- a/html/years/2026.html
+++ b/html/years/2026.html
@@ -29,6 +29,7 @@
 <p>No phone while driving</p>
 <p>No technology for 30 min after waking up</p>
 <p>Antagonist list every other week</p>
+<p>No drinking to go to sleep</p>
 
 
 </center>
