--- a/html/projects/finrepair.html
+++ b/html/projects/finrepair.html
@@ -15,6 +15,25 @@
 <h1>Found Longboard Fin Repair</h1>
 <style>h1 {text-decoration: underline;}</style>
 <p>I found this fin while spearfishing at Diamond Head in Oahu and I thought it would be fun to restore it to give as a gift to my sister for Christmas.</p>
+<br>
+<img src="/images/projects/finrepair/1.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>Fin in raw state with some coral/algae growing on it</p>
+<img src="/images/projects/finrepair/2.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>Fin after sanding, the garage smelled like rotting seaweed!</p>
+<img src="/images/projects/finrepair/3.jpg" alt="logo" style="width:300px;height:400px;">
+<img src="/images/projects/finrepair/4.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>getting dyed with a nice aquamarine/blue coloring</p>
+<img src="/images/projects/finrepair/5.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>After dyeing and strating to get layers of clearcoat</p>
+<img src="/images/projects/finrepair/6.jpg" alt="logo" style="width:300px;height:400px;">
+<img src="/images/projects/finrepair/7.jpg" alt="logo" style="width:300px;height:400px;">
+  <p>Had a tough time picking monstera and heliconia out of all the stickers I had</p>
+  <p>Had to use fiberglass resin sealant over the stickers so they would stay waterproof</p>
+<img src="/images/projects/finrepair/8.jpg" alt="logo" style="width:300px;height:400px;">
+<img src="/images/projects/finrepair/9.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>mounting the pivot pin</p>
+<img src="/images/projects/finrepair/10.jpg" alt="logo" style="width:300px;height:400px;">
+ <p>Looks great in the board!</p>
 
  </body>
 </center>
