--- a/html/projects/projects.html
+++ b/html/projects/projects.html
@@ -15,9 +15,15 @@
 <h1>Projects, Crafts, and Repairs</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+ <a href="/html/projects/finrepair.html">
+	<img src="/images/projects/finrepair/10.jpg" alt="logo" style="width:300px;height:400px;">
+</a>
+<h2>Fin Salvage</h2>
+
  </body>
 </center>
 </html>
+
 
 
 
