--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -25,12 +25,14 @@
 
 
 <h1>THE LIST</h1>
+<h2>Santee Boulders (1/7)</h2>
+<p>Twenty Point Problem V4</p>
 
-
-<h2>Total: 0</h2>
+<h2>Total: 4</h2>
 
 </center>
 </html>
+
 
 
 
