--- a/html/cacrags/santee.html
+++ b/html/cacrags/santee.html
@@ -12,12 +12,22 @@
 </div>
 <center>
 
-<h1>Pima Canyon, South Mountain AZ</h1>
+<h1>Santee Boulders, Southern CA</h1>
 <style>h1 {text-decoration: underline;}</style>
 
 
-<a href="/html/azcrags/pimaclimbs.html">
-	<h2>Complete List: 181 Problems + 2 Routes + 5 Projects</h2>
+<a href="/html/azcrags/santeeclimbs.html">
+	<h2>Complete List:</h2>
+</a>
+
+<h2>12/28/25</h2>
+<a href="https://www.youtube.com/shorts/N8-KJSAsL0Q">
+<p>Black Spot Problem V2</p>
+</a>
+<br>
+<h2>12/28/25</h2>
+<a href="https://www.youtube.com/shorts/XMf5omSF_Bw">
+<p>Twenty Point Problem V4</p>
 </a>
 
  </center>
