--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -23,13 +23,28 @@
 </a>
 
 <h2>climbs by date</h2>
-
-
+<br>
+<h2>1/9</h2>
+<p>Key to the Kingdom V3</p>
+<p>Gimmie Some V0</p>
+<p>Crown of Thorns V3</p>
+<p>Silly Little Dirty V2</p>
+<p>Standing Ovation V4</p>
+<p>Crown Jewel V4</p>
+<p>Hand Jive V2</p>
+<p>Pima Traverse V4</p>
+<p>The Tongue V2</p>
+<p>Iguana Head V3</p>
+<p>Tweedle Dee V1</p>
+<p>Tweedle Dumb V0</p>
+<p>Liposuction V2</p>
+<p>Stairway to Heaven V4</p>
 
 
 </center>
 
  </html>
+
 
 
 
