--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -27,11 +27,29 @@
 <h1>THE LIST</h1>
 <h2>Santee Boulders (1/7)</h2>
 <p>Twenty Point Problem V4</p>
+<br>
+ 
+<h2>Pima Canyon (1/9)</h2>
+<p>Key to the Kingdom V3</p>
+<p>Gimmie Some V0</p>
+<p>Crown of Thorns V3</p>
+<p>Silly Little Dirty V2</p>
+<p>Standing Ovation V4</p>
+<p>Crown Jewel V4</p>
+<p>Hand Jive V2</p>
+<p>Pima Traverse V4</p>
+<p>The Tongue V2</p>
+<p>Iguana Head V3</p>
+<p>Tweedle Dee V1</p>
+<p>Tweedle Dumb V0</p>
+<p>Liposuction V2</p>
+<p>Stairway to Heaven V4</p>
 
-<h2>Total: 4</h2>
+ <h2>Total: 38</h2>
 
 </center>
 </html>
+
 
 
 
