--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -15,7 +15,7 @@
 
 <h1>The Pima Punisher Total List!</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>"(f:Flash)   (#s:Burns Before Send)   (Date Sent)   (V#: My Grade)"</p>
+<p>"(F:Flash)   (#s:Burns Before Send)   (Date Sent)"</p>
 
 <h2>Problems</h2>
 <p>	Sharks Tooth	VE	</p>
@@ -24,7 +24,7 @@
 <p>	Blockstar	V0	</p>
 <p>	Chimney Sweep	V0	</p>
 <p>	Limited Choss	V0	</p>
-<p>	Gimmie Some	V0	</p>
+<s>	Gimmie Some	V0	(F) 1/9/26 </s><br>
 <p>	Book of Fun	V0	</p>
 <p>	Sunday School	V0	</p>
 <p>	Top Hat	V0	</p>
@@ -60,14 +60,14 @@
 <p>	Slick Trip	V0	</p>
 <p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
-<p> Tweedle Dumb	V0	</p>
+<s> Tweedle Dumb	V0	(F) 1/9/26 </s><br>
 <p> Dilbert	V0	</p>
 <p> Stand And Deliver	V0	</p>
 <p> Planetspotting	V0	</p>
 <p> Studio Special	V0	</p>
 <p>	Mannys Problem	V0	</p>
 <p>	Birth of Venus	V0-1	</p>
-<p>	Tweedle Dee V1 </p>
+<s>	Tweedle Dee V1 (F) 1/9/26 </s><br>
 <p>	Wanderlust V1 </p>
 <p>	Schnebly Does Crack	V1	</p>
 <p>	Simple Solution	V1	</p>
@@ -88,8 +88,8 @@
 <p>	Low Rider	V1-2	</p>
 <p>	Hookers Around the Corner	V2	</p>
 <p>	Hookers are fun!	V2	</p>
-<p>	Silly Little Dirty	V2	</p>
-<p>	The Tongue	V2	</p>
+<s>	Silly Little Dirty	V2	(F) 1/9/26 </s><br>
+<s>	The Tongue	V2	(F) 1/9/26 </s><br>
 <p>	Topsy Turvy	V2	</p>
 <p>	Lost And Found	V2	</p>
 <p>	Frosted Flakes	V2	</p>
@@ -98,7 +98,7 @@
 <p>	The Onion	V2	</p>
 <p>	Easy Way Out	V2	</p>
 <p>	Snake Pit	V2	</p>
-<p> Liposuction V2</p>
+<s> Liposuction V2 (F) 1/9/26 </s><br>
 <p>	Tatoo Tiger	V2	</p>
 <p>	Rangler	V2	</p>
 <p>	Inside Out	V2	</p>
@@ -107,13 +107,13 @@
 <p>	Mother Neature	V2	</p>
 <p>	No Flakes Given	V2	</p>
 <p>	Dick Leakage	V2	</p>
-<p>	Hand Jive	V2	</p>
+<s>	Hand Jive	V2	(2S) 1/9/26 </s><br>
 <p>	Bad Llama	V2	</p>
 <p>	Wheat Thin	V2-3	</p>
 <p>	Mindfullness	V3	</p>
 <p>	Predator	V3	</p>
 <p>	Nasal Cavity (Jump Start)	V3	</p>
-<p>	Crown of Thorns	V3	</p>
+<s>	Crown of Thorns	V3	(F) 1/9/26 </s><br>
 <p>	Puppet Master	V3	</p>
 <p>	White Men Don't Jump (Jump Start Right)	V3	</p>
 <p>	Two Scoops	V3	</p>
@@ -122,22 +122,22 @@
 <p>	Trick Or Treat	V3	</p>
 <p>	South America V3	</p>
 <p> Washed Out V3 </p>
-<p> Iguana Head V3 </p>
+<s> Iguana Head V3 (F) 1/9/26 </s><br>
 <p> Superfly V3 </p>
 <p>	Throw Some D's	V3	</p>
 <p>	Seeing Red	V3	</p>
 <p>	Clamor and Filth of the Cultural Apparatus	V3	</p>
 <p>	KG SOLOMAN 5000	V3	</p>
 <p>	Crackhead	V3	</p>
-<p> Key To The Kingdom V3 </p>
+<s> Key To The Kingdom V3 (F) 1/9/26</s><br>
 <p>	First Time	V3	</p>
 <p>	Grease Monkey	V3	</p>
 <p>	Slo-Mo	V4	</p>
 <p>	Number 1 OW	V4	</p>
-<p>	Crown Jewel	V4	</p>
+<s>	Crown Jewel	V4	(F) 1/9/26 </s><br>
 <p>	Versatility	V4	</p>
-<p>	Stairway to Heaven	V4	</p>
-<p> Standing Ovation V4 </p>
+<s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
+<s> Standing Ovation V4 (F) 1/9/26 </s><br>
 <p>	Tsunami	V4	</p>
 <p>	Tsunami Arete	V4	</p>
 <p>	Main Attraction	V4	</p>
@@ -147,7 +147,7 @@
 <p>	Cocaine Corner	V4	</p>
 <p>	MVFB	V4	</p>
 <p>	Hallow Man	V4	</p>
-<p>	Pima Traverse	V4	</p>
+<s>	Pima Traverse	V4	(F) 1/9/26 </s><br>
 <p>	Mr. Schnebly	V4	</p>
 <p>	The Lecture	V4	</p>
 <p>	Red Ruby	V4	</p>
