--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,6 +4,9 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<img src="/images/mastergarbage/bike7.jpg" alt="logo" style="width:1700px;height:500px;">
+<p>Spotted: "I dont have enough friends"</p>
+<p>1/10/2026 @ 10:32</p>
 <br>
 <img src="/images/mastergarbage/smoling.jpg" alt="logo" style="width:320px;height:190px;">
 <p>reddit trash:"Parlie and Chim"</p>
@@ -57,6 +60,7 @@
 </center>
 
  </html>
+
 
 
 
