--- a/html/thinking.html
+++ b/html/thinking.html
@@ -32,6 +32,10 @@
 <h2>The process:</h2>
 <p>Its more fun and more rewarding doing and accomplishing things the hard way. Stay focused and enjoy the process</p>
 
+<h2>Sign Spinners:</h2>
+<p>sign spinners are the purest most ultimate form of advertising. </p>
+<br>
+
 
 <br>
 <a href="/html/lifeidioms.html">
