--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -60,7 +60,7 @@
 <p>	Slick Trip	V0	</p>
 <p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
-<s> Tweedle Dumb	V0	(F) 1/9/26 </s><br>
+<s> Tweedle Dum	V0	(F) 1/9/26 </s><br>
 <p> Dilbert	V0	</p>
 <p> Stand And Deliver	V0	</p>
 <p> Planetspotting	V0	</p>
