--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,6 +4,10 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<img src="/images/mastergarbage/birdlight.jpg" alt="logo" style="width:300px;height:400px;">
+<p>Spotted: "Nature finds its way"</p>
+<p>1/10/2026 @ 14:16</p>
+<br>
 <img src="/images/mastergarbage/bike7.jpg" alt="logo" style="width:1700px;height:500px;">
 <p>Spotted: "I dont have enough friends"</p>
 <p>1/10/2026 @ 10:32</p>
@@ -60,6 +64,7 @@
 </center>
 
  </html>
+
 
 
 
