--- a/html/thinking.html
+++ b/html/thinking.html
@@ -33,7 +33,7 @@
 <p>Its more fun and more rewarding doing and accomplishing things the hard way. Stay focused and enjoy the process</p>
 
 <h2>Sign Spinners:</h2>
-<p>sign spinners are the purest most ultimate form of advertising. </p>
+<p>sign spinners are the purest most ultimate form of advertising. Using your own body and its movement to advertise something is pretty fucking punk rock. Go tip your nearest sign spinner because they are busting to no real audience.</p>
 <br>
 
 
