--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,6 +4,10 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<img src="/images/mastergarbage/dinooil.jpg" alt="logo" style="width:300px;height:400px;">
+<p>man we live in a society: "kick the vegans off the road"</p>
+<p>1/10/2026 @ 19:41</p>
+<br>
 <img src="/images/mastergarbage/birdlight.jpg" alt="logo" style="width:300px;height:400px;">
 <p>Spotted: "Nature finds its way"</p>
 <p>1/10/2026 @ 14:16</p>
