--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -134,7 +134,7 @@
 <p>	Grease Monkey	V3	</p>
 <p>	Slo-Mo	V4	</p>
 <p>	Number 1 OW	V4	</p>
-<s>	Crown Jewel	V4	(F) 1/9/26 </s><br>
+<s>	Crown Jewel	V4	(1S) 1/9/26 </s><br>
 <p>	Versatility	V4	</p>
 <s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
 <s> Standing Ovation V4 (F) 1/9/26 </s><br>
