--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -45,7 +45,16 @@
 <p>Liposuction V2</p>
 <p>Stairway to Heaven V4</p>
 
- <h2>Total: 38</h2>
+<h2>Superstitions (1/11)</h2>
+<p>Warmup V2 V2</p>
+<p>Humped Up V2</p>
+<p>Subway V4</p>
+<p>Redhook Torpedo V4</p>
+<p>Pale Face V5</p>
+<p>Los Dos Pacificos V3</p>
+<p>Crystal Ball V5</p>
+
+<h2>Total: 38</h2>
 
 </center>
 </html>
