--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -25,25 +25,40 @@
 <h2>climbs by date</h2>
 <br>
 <h2>1/9</h2>
-<p>Key to the Kingdom V3</p>
-<p>Gimmie Some V0</p>
-<p>Crown of Thorns V3</p>
-<p>Silly Little Dirty V2</p>
-<p>Standing Ovation V4</p>
-<p>Crown Jewel V4</p>
-<p>Hand Jive V2</p>
-<p>Pima Traverse V4</p>
-<p>The Tongue V2</p>
-<p>Iguana Head V3</p>
-<p>Tweedle Dee V1</p>
-<p>Tweedle Dum V0</p>
-<p>Liposuction V2</p>
-<p>Stairway to Heaven V4</p>
+<a href="https://www.youtube.com/shorts/0DhXZIfQUB0">
+<p>Key to the Kingdom V3</p></a>
+<a href="https://www.youtube.com/shorts/bUPF39KQ4nU">
+<p>Gimmie Some V0</p></a>
+<a href="https://www.youtube.com/shorts/DeMr3BVO_oA">
+<p>Crown of Thorns V3</p></a>
+<a href="https://www.youtube.com/shorts/hvlsH8mGDsU">
+<p>Silly Little Dirty V2</p></a>
+<a href="https://www.youtube.com/shorts/wxYzF2KVMJA">
+<p>Standing Ovation V4</p></a>
+<a href="https://www.youtube.com/shorts/i8SjmqV5SBU">
+<p>Crown Jewel V4</p></a>
+<a href="https://www.youtube.com/shorts/oaK-vKmCpcs">
+<p>Hand Jive V2</p></a>
+<a href="https://www.youtube.com/watch?v=9dQM26fMKj8">
+<p>Pima Traverse V4</p></a>
+<a href="https://www.youtube.com/shorts/Jz44ZLVQghc">
+<p>The Tongue V2</p></a>
+<a href="https://www.youtube.com/shorts/TFUdJ8VAc1o">
+<p>Iguana Head V3</p></a>
+<a href="https://www.youtube.com/shorts/191BoQ2LPzo">
+<p>Tweedle Dee V1</p></a>
+<a href="https://www.youtube.com/shorts/K5PESDT6x9U">
+<p>Tweedle Dum V0</p></a>
+<a href="https://www.youtube.com/shorts/aLGDFgHeqtE">
+<p>Liposuction V2</p></a>
+<a href="https://www.youtube.com/shorts/nHa89puDpRM">
+<p>Stairway to Heaven V4</p></a>
 
 
 </center>
 
  </html>
+
 
 
 
