--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -21,6 +21,16 @@
 </a>
 <p>Fortress PDF guide and map</p>
 
+<h2>Cemetery: 1/11/26</h2>
+<p>Ventured to the cemetery to get away from the 25 people in the Fortress</p>
+<p>Warmup V2 V2 (F)</p>
+<p>Humped Up V2 (F)</p>
+<p>Subway V4 (F)</p>
+<p>Redhook Torpedo V4 (F)</p>
+<p>Pale Face V5 (F)</p>
+<p>Los Dos Pacificos V3 (F)</p>
+<p>Crystal Ball V5 (F)</p>
+
  </center>
  </html>
 
