--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -54,10 +54,14 @@
 <p>Los Dos Pacificos V3</p>
 <p>Crystal Ball V5</p>
 
-<h2>Total: 63</h2>
+<h2>Superstitions (1/13)</h2>
+<p>Captain Stabbums V5</p>
+
+<h2>Total: 68</h2>
 
 </center>
 </html>
+
 
 
 
