--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -31,6 +31,12 @@
 <p>Los Dos Pacificos V3 (F)</p>
 <p>Crystal Ball V5 (F)</p>
 
+<h2>Fortress 1/13/26</h2>
+<p>Keyhole V3 (L)</p>
+<p>Skeleton Key V4 (L)</p>
+<p>Mikes Arete V5 (L)</p>
+<p>Captain Stabbums V5 (S)</p>
+
  </center>
  </html>
 
