--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -53,11 +53,29 @@
 <p>Liposuction V2</p></a>
 <a href="https://www.youtube.com/shorts/nHa89puDpRM">
 <p>Stairway to Heaven V4</p></a>
+<br>
+
+<h2>1/15</h2>
+<p>Crwon Traverse V4</p>
+<p>MV Problem V4</p>
+<p>Hookers Are Fun V2</p>
+<p>Hookers Around The Corner V2</p>
+<p>Wanderlust V2</p>
+<p>Walking Tall V0</p>
+<p>Varicose Vein V0</p>
+<p>Pinch Hitter V1</p>
+<p>Chimney Sweep V0</p>
+<p>Blockstar V0</p>
+<p>Robins Crack VE</p>
+<p>Proud Line V0</p>
+<p>Low Rider V2</p>
+<p>Main Attraction V4</p>
 
 
 </center>
 
  </html>
+
 
 
 
