--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -57,10 +57,20 @@
 <h2>Superstitions (1/13)</h2>
 <p>Captain Stabbums V5</p>
 
-<h2>Total: 68</h2>
+<h2>Pima Canyon (1/15)</h2>
+<p>Crown Traverse V4</p>
+<p>MV Problem V4</p>
+<p>Hookers Are Fun V2</p>
+<p>Hookers Around The Corner V2</p>
+<p>Wanderlust V2</p>
+<p>Pinch Hitter V1</p>
+<p>Low Rider V2</p>
+
+<h2>Total: 85</h2>
 
 </center>
 </html>
+
 
 
 
