--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -19,10 +19,10 @@
 
 <h2>Problems</h2>
 <p>	Sharks Tooth	VE	</p>
-<p>	Robbins Crack	VE	</p>
+<s>	Robbins Crack	VE	(F) 1/15/26</s><br>
 <p>	Sage	VE	</p>
-<p>	Blockstar	V0	</p>
-<p>	Chimney Sweep	V0	</p>
+<s>	Blockstar	V0	(F) 1/15/26</s><br>
+<s>	Chimney Sweep	V0	(F) 1/15/26</s><br>
 <p>	Limited Choss	V0	</p>
 <s>	Gimmie Some	V0	(F) 1/9/26 </s><br>
 <p>	Book of Fun	V0	</p>
@@ -31,11 +31,11 @@
 <p>	Shit, Shower, and Shave	V0	</p>
 <p>	Camel Toes	V0	</p>
 <p>	Suspended Animation	V0	</p>
-<p>	Proud Line	V0	</p>
+<s>	Proud Line	V0	(F) 1/15/26</s><br>
 <p>	Horney Toad	V0	</p>
-<p>	Varicose Vein	V0	</p>
+<s>	Varicose Vein	V0	(F) 1/15/26</s><br>
 <p>	Lost	V0	</p>
-<p>	Walking Tall	V0	</p>
+<s>	Walking Tall	V0	(F) 1/15/26</s><br>
 <p>	Hidden Splendor	V0	</p>
 <p>	The Librarian	V0	</p>
 <p>	Cowgirl Sex	V0	</p>
@@ -68,11 +68,10 @@
 <p>	Mannys Problem	V0	</p>
 <p>	Birth of Venus	V0-1	</p>
 <s>	Tweedle Dee V1 (F) 1/9/26 </s><br>
-<p>	Wanderlust V1 </p>
 <p>	Schnebly Does Crack	V1	</p>
 <p>	Simple Solution	V1	</p>
 <p>	Flippin the Bitch	V1	</p>
-<p>	Pinch Hitter	V1	</p>
+<s>	Pinch Hitter	V1	(F) 1/15/26</s><br>
 <p>	The Gnome	V1	</p>
 <p>	Desperation Alley	V1	</p>
 <p>	Snap Crackle Pop	V1	</p>
@@ -85,9 +84,10 @@
 <p>	Guardian of the Canvas	V1-2	</p>
 <p>	Tokugawa	V1-2	</p>
 <p>	Can't Send Me to Rehab	V1-2	</p>
-<p>	Low Rider	V1-2	</p>
-<p>	Hookers Around the Corner	V2	</p>
-<p>	Hookers are fun!	V2	</p>
+<s>	Low Rider	V2	(F) 1/15/26</s><br>
+<s>	Wanderlust V2 (F) 1/15/26</s><br>
+<s>	Hookers Around the Corner	V2	(F) 1/15/26</s><br>
+<s>	Hookers are fun!	V2	(2S) 1/15/26</s><br>
 <s>	Silly Little Dirty	V2	(F) 1/9/26 </s><br>
 <s>	The Tongue	V2	(F) 1/9/26 </s><br>
 <p>	Topsy Turvy	V2	</p>
@@ -134,13 +134,13 @@
 <p>	Grease Monkey	V3	</p>
 <p>	Slo-Mo	V4	</p>
 <p>	Number 1 OW	V4	</p>
-<s>	Crown Jewel	V4	(1S) 1/9/26 </s><br>
+<s>	Crown Jewel	V4	(L) 1/9/26 </s><br>
 <p>	Versatility	V4	</p>
 <s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
 <s> Standing Ovation V4 (F) 1/9/26 </s><br>
 <p>	Tsunami	V4	</p>
 <p>	Tsunami Arete	V4	</p>
-<p>	Main Attraction	V4	</p>
+<s>	Main Attraction	V4	(L) 1/15/26</s><br>
 <p>	False Samurai	V4	</p>
 <p>	Out of Africa	V4	</p>
 <p>	Air Leeches	V4	</p>
@@ -153,8 +153,8 @@
 <p>	Red Ruby	V4	</p>
 <p>	Pop Rocks	V4	</p>
 <p>	Muay Thai Friday	V4	</p>
-<p>	Crown Traverse	V4	</p>
-<p>	MV Problem	V4	</p>
+<s>	Crown Traverse	V4	(F) 1/15/26</s><br>
+<s>	MV Problem	V4	(F) 1/15/26</s><br>
 <p>	Sidewinder	V4	</p>
 <p>	Deviated Septum	V4-5	</p>
 <p>	Locked and Loaded	V5	</p>
