--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -56,25 +56,40 @@
 <br>
 
 <h2>1/15</h2>
-<p>Crown Traverse V4</p>
-<p>MV Problem V4</p>
-<p>Hookers Are Fun V2</p>
-<p>Hookers Around The Corner V2</p>
-<p>Wanderlust V2</p>
-<p>Walking Tall V0</p>
-<p>Varicose Vein V0</p>
-<p>Pinch Hitter V1</p>
-<p>Chimney Sweep V0</p>
-<p>Blockstar V0</p>
-<p>Robins Crack VE</p>
-<p>Proud Line V0</p>
-<p>Low Rider V2</p>
-<p>Main Attraction V4</p>
+<a href="https://www.youtube.com/watch?v=M_We1vJDoWU">
+<p>Crown Traverse V4</p></a>
+<a href="https://www.youtube.com/shorts/P2SNan0wTYg">
+<p>MV Problem V4</p></a>
+<a href="https://www.youtube.com/watch?v=vuBpjb95YEw">
+<p>Hookers Are Fun V2</p></a>
+<a href="https://www.youtube.com/shorts/c3zelrWsxCc">
+<p>Hookers Around The Corner V2</p></a>
+<a href="https://www.youtube.com/shorts/VmrSRhchWLI">
+<p>Wanderlust V2</p></a>
+<a href="https://www.youtube.com/shorts/ezLPn0BJoPg">
+<p>Walking Tall V0</p></a>
+<a href="https://www.youtube.com/shorts/Va5UgM29vDY">
+<p>Varicose Vein V0</p></a>
+<a href="https://www.youtube.com/shorts/_19pNRhPiM0">
+<p>Pinch Hitter V1</p></a>
+<a href="https://www.youtube.com/shorts/RfjVXYDtY50">
+<p>Chimney Sweep V0</p></a>
+<a href="https://www.youtube.com/shorts/6ioP1H74BIA">
+<p>Blockstar V0</p></a>
+<a href="https://www.youtube.com/shorts/_v9u-qWRNEk">
+<p>Robins Crack VE</p></a>
+<a href="https://www.youtube.com/shorts/m5yPG4aK61g">
+<p>Proud Line V0</p></a>
+<a href="https://www.youtube.com/watch?v=wPbsYrf0FbI">
+<p>Low Rider V2</p></a>
+<a href="https://www.youtube.com/shorts/zRa01b_Ngjg">
+<p>Main Attraction V4</p></a>
 
 
 </center>
 
  </html>
+
 
 
 
