--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -66,10 +66,15 @@
 <p>Pinch Hitter V1</p>
 <p>Low Rider V2</p>
 
-<h2>Total: 85</h2>
+<h2>Groom Creek (1/16)</h2>
+<p>Farmer John V4</p>
+<p>Sucker Problem V4</p>
+
+<h2>Total: 94</h2>
 
 </center>
 </html>
+
 
 
 
