Update V-Point Challenge HTML with point totals
Added point totals for climbing locations.

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -25,11 +25,11 @@
 
 
 <h1>THE LIST</h1>
-<h2>Santee Boulders (1/7)</h2>
+<h2>Santee Boulders (1/7): 4</h2>
 <p>Twenty Point Problem V4</p>
 <br>
  
-<h2>Pima Canyon (1/9)</h2>
+<h2>Pima Canyon (1/9): 34</h2>
 <p>Key to the Kingdom V3</p>
 <p>Gimmie Some V0</p>
 <p>Crown of Thorns V3</p>
@@ -45,7 +45,7 @@
 <p>Liposuction V2</p>
 <p>Stairway to Heaven V4</p>
 
-<h2>Superstitions (1/11)</h2>
+<h2>Superstitions (1/11): 25</h2>
 <p>Warmup V2 V2</p>
 <p>Humped Up V2</p>
 <p>Subway V4</p>
@@ -54,10 +54,10 @@
 <p>Los Dos Pacificos V3</p>
 <p>Crystal Ball V5</p>
 
-<h2>Superstitions (1/13)</h2>
+<h2>Superstitions (1/13): 5</h2>
 <p>Captain Stabbums V5</p>
 
-<h2>Pima Canyon (1/15)</h2>
+<h2>Pima Canyon (1/15): 17</h2>
 <p>Crown Traverse V4</p>
 <p>MV Problem V4</p>
 <p>Hookers Are Fun V2</p>
@@ -66,7 +66,7 @@
 <p>Pinch Hitter V1</p>
 <p>Low Rider V2</p>
 
-<h2>Groom Creek (1/16)</h2>
+<h2>Groom Creek (1/16): 8</h2>
 <p>Farmer John V4</p>
 <p>Sucker Problem V4</p>
 
@@ -74,6 +74,7 @@
 
 </center>
 </html>
+
 
 
 
