Update V-Point Challenge entries and totals
Updated the total points and added a new entry for Superstitions.

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -75,10 +75,15 @@
 <p>Sucker Problem V4</p>
 <br>
 
-<h2>Total: 93</h2>
+<h2>Superstitions (1/18): 10</h2>
+<p>General Dissaray V10/p>
+<br>
+
+<h2>Total: 103</h2>
 
 </center>
 </html>
+
 
 
 
