Add Fortress section with new routes

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -37,6 +37,10 @@
 <p>Mikes Arete V5 (L)</p>
 <p>Captain Stabbums V5 (S)</p>
 
+<h2>Fortress 1/18/26</h2>
+<p>General Dissaray V10 (S)</p>
+<br>
+
  </center>
  </html>
 
