Fix HTML formatting and update content

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -76,13 +76,14 @@
 <br>
 
 <h2>Superstitions (1/18): 10</h2>
-<p>General Dissaray V10/p>
+<p>General Dissaray V10</p>
 <br>
 
 <h2>Total: 103</h2>
 
 </center>
 </html>
+
 
 
 
