--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -84,11 +84,29 @@
 <p>Low Rider V2</p></a>
 <a href="https://www.youtube.com/shorts/zRa01b_Ngjg">
 <p>Main Attraction V4</p></a>
+<br>
 
-
+<h2>1/20</h2>
+<p>Tokugawa V2</p>
+<p>Planespotting V0</p>
+<p>Dragonhead V0</p>
+<p>Snake Pit V2</p>
+<p>Birth of Venus V0</p>
+<p>Supsended Animation V0</p>
+<p>Palette Knife V2</p>
+<p>Surrealism on Acid V0</p>
+<p>Studio Special V0</p>
+<p>Guardian of the Canvas V2</p>
+<p>Fisticuffs V5</p>
+<p>Double Fisted V5</p>
+<p>Lost V0</p>
+<p>Jiffy Pop V2</p>
+<p>Puppet Master V3</p>
+<p>Washed Out V3</p>
 </center>
 
  </html>
+
 
 
 
