--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -79,10 +79,30 @@
 <p>General Dissaray V10</p>
 <br>
 
-<h2>Total: 103</h2>
+<h2>Pima Canyon (1/20): 26</h2>
+<p>Tokugawa V2</p>
+<p>Planespotting V0</p>
+<p>Dragonhead V0</p>
+<p>Snake Pit V2</p>
+<p>Birth of Venus V0</p>
+<p>Supsended Animation V0</p>
+<p>Palette Knife V2</p>
+<p>Surrealism on Acid V0</p>
+<p>Studio Special V0</p>
+<p>Guardian of the Canvas V2</p>
+<p>Fisticuffs V5</p>
+<p>Double Fisted V5</p>
+<p>Lost V0</p>
+<p>Jiffy Pop V2</p>
+<p>Puppet Master V3</p>
+<p>Washed Out V3</p>
+<br>
+
+<h2>Total: 129</h2>
 
 </center>
 </html>
+
 
 
 
