--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -30,11 +30,11 @@
 <p>	Top Hat	V0	</p>
 <p>	Shit, Shower, and Shave	V0	</p>
 <p>	Camel Toes	V0	</p>
-<p>	Suspended Animation	V0	</p>
+<s>	Suspended Animation	V0	(F) 1/20/26</s><br>
 <s>	Proud Line	V0	(F) 1/15/26</s><br>
 <p>	Horney Toad	V0	</p>
 <s>	Varicose Vein	V0	(F) 1/15/26</s><br>
-<p>	Lost	V0	</p>
+<s>	Lost	V0	(F) 1/20/26</s><br>
 <s>	Walking Tall	V0	(F) 1/15/26</s><br>
 <p>	Hidden Splendor	V0	</p>
 <p>	The Librarian	V0	</p>
@@ -50,9 +50,9 @@
 <p>	One Way Out	V0	</p>
 <p>	Honduran	V0	</p>
 <p>	Wrong Place, Wrong Time	V0	</p>
-<p>	Surrealism on Acid	V0	</p>
+<s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
 <p>	Nothing to it	V0	</p>
-<p>	Serpents Throne	V0	</p>
+<s>	Serpents Throne	V0	(BROKEN)</s><br>
 <p>	Nut Cracker	V0	</p>
 <p>	Frosted Flakes	V0	</p>
 <p>	Razors Edge	V0	</p>
@@ -61,12 +61,13 @@
 <p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
 <s> Tweedle Dum	V0	(F) 1/9/26 </s><br>
-<p> Dilbert	V0	</p>
+<s> Dilbert	V0	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <p> Stand And Deliver	V0	</p>
-<p> Planetspotting	V0	</p>
-<p> Studio Special	V0	</p>
+<s> Planetspotting	V0	(F) 1/20/26</s><br>
+<s> Dragonhead	V0	(F) 1/20/26</s><br>
+<s> Studio Special	V0	(F) 1/20/26</s><br>
 <p>	Mannys Problem	V0	</p>
-<p>	Birth of Venus	V0-1	</p>
+<s>	Birth of Venus	V0	(F) 1/20/26</s><br>
 <s>	Tweedle Dee V1 (F) 1/9/26 </s><br>
 <p>	Schnebly Does Crack	V1	</p>
 <p>	Simple Solution	V1	</p>
@@ -77,27 +78,27 @@
 <p>	Snap Crackle Pop	V1	</p>
 <p>	Huckleberry Thin	V1	</p>
 <p>	3 D's Are Better Than 2	V1	</p>
-<p>	Gaurdian Of The Canvas	V1	</p>
-<p> Dilbert Unleashed	V1	</p>
+<s>	Gaurdian Of The Canvas	V2	(F) 1/20/26</s><br>
+<s> Dilbert Unleashed	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <p>	Arrowhead	V1-2	</p>
-<p>	Jiffy Pop	V1-2	</p>
 <p>	Guardian of the Canvas	V1-2	</p>
-<p>	Tokugawa	V1-2	</p>
 <p>	Can't Send Me to Rehab	V1-2	</p>
+<s>	Tokugawa	V2	(F) 1/20/26</s><br>
 <s>	Low Rider	V2	(F) 1/15/26</s><br>
 <s>	Wanderlust V2 (F) 1/15/26</s><br>
 <s>	Hookers Around the Corner	V2	(F) 1/15/26</s><br>
 <s>	Hookers are fun!	V2	(2S) 1/15/26</s><br>
 <s>	Silly Little Dirty	V2	(F) 1/9/26 </s><br>
 <s>	The Tongue	V2	(F) 1/9/26 </s><br>
+<s>	Jiffy Pop	V2	(F) 1/20/26</s><br>
 <p>	Topsy Turvy	V2	</p>
 <p>	Lost And Found	V2	</p>
 <p>	Frosted Flakes	V2	</p>
-<p>	Palette Knife	V2	</p>
+<s>	Palette Knife	V2	(F) 1/20/26</s><br>
 <p>	Slip N' Slide	V2	</p>
 <p>	The Onion	V2	</p>
 <p>	Easy Way Out	V2	</p>
-<p>	Snake Pit	V2	</p>
+<s>	Snake Pit	V2	(F) 1/20/26</s><br>
 <s> Liposuction V2 (F) 1/9/26 </s><br>
 <p>	Tatoo Tiger	V2	</p>
 <p>	Rangler	V2	</p>
@@ -114,14 +115,14 @@
 <p>	Predator	V3	</p>
 <p>	Nasal Cavity (Jump Start)	V3	</p>
 <s>	Crown of Thorns	V3	(F) 1/9/26 </s><br>
-<p>	Puppet Master	V3	</p>
+<s>	Puppet Master	V3	1/20/26</s><br>
 <p>	White Men Don't Jump (Jump Start Right)	V3	</p>
 <p>	Two Scoops	V3	</p>
 <p>	Projected	V3	</p>
 <p>	Side Salad	V3	</p>
 <p>	Trick Or Treat	V3	</p>
 <p>	South America V3	</p>
-<p> Washed Out V3 </p>
+<s> Washed Out V3 1/20/26</s><br>
 <s> Iguana Head V3 (F) 1/9/26 </s><br>
 <p> Superfly V3 </p>
 <p>	Throw Some D's	V3	</p>
@@ -160,8 +161,8 @@
 <p>	Locked and Loaded	V5	</p>
 <p>	Rocky Mountain Daydream	V5	</p>
 <p>	Wheat Thin-er (Sit Start)	V5	</p>
-<p>	Double Fisted	V5	</p>
-<p>	Fisticuffs	V5	</p>
+<s>	Double Fisted	V5	(4S) 1/20/26</s><br>
+<s>	Fisticuffs	V5	(3S) 1/20/26</s><br>
 <p>	The Captain	V5	</p>
 <p>	Tenille	V5	</p>
 <p>	Table Topper	V5	</p>
