--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -87,25 +87,42 @@
 <br>
 
 <h2>1/20</h2>
-<p>Tokugawa V2</p>
-<p>Planespotting V0</p>
-<p>Dragonhead V0</p>
-<p>Snake Pit V2</p>
-<p>Birth of Venus V0</p>
-<p>Supsended Animation V0</p>
-<p>Palette Knife V2</p>
-<p>Surrealism on Acid V0</p>
-<p>Studio Special V0</p>
-<p>Guardian of the Canvas V2</p>
-<p>Fisticuffs V5</p>
-<p>Double Fisted V5</p>
-<p>Lost V0</p>
-<p>Jiffy Pop V2</p>
-<p>Puppet Master V3</p>
-<p>Washed Out V3</p>
+<a href="https://www.youtube.com/shorts/fUOHmGOjS7Q">
+<p>Tokugawa V2</p></a>
+<a href="https://www.youtube.com/shorts/on4z_yG0i18">
+<p>Planespotting V0</p></a>
+<a href="https://www.youtube.com/shorts/YOn9r50PgwI">
+<p>Dragonhead V0</p></a>
+<a href="https://www.youtube.com/shorts/iZg994dFAP0">
+<p>Snake Pit V2</p></a>
+<a href="https://www.youtube.com/shorts/f9T0KLHRH2s">
+<p>Birth of Venus V0</p></a>
+<a href="https://www.youtube.com/shorts/HAe6ISlX-4A">
+<p>Supsended Animation V0</p></a>
+<a href="https://www.youtube.com/shorts/dEbQzpuSql8">
+<p>Palette Knife V2</p></a>
+<a href="https://www.youtube.com/shorts/GcLcBKUAvnY">
+<p>Surrealism on Acid V0</p></a>
+<a href="https://www.youtube.com/shorts/1KKvXK-CoVU">
+<p>Studio Special V0</p></a>
+<a href="https://www.youtube.com/watch?v=7MYXk8tJbc8">
+<p>Guardian of the Canvas V2</p></a>
+<a href="https://www.youtube.com/shorts/14HHGnBri3A">
+<p>Fisticuffs V5</p></a>
+<a href="https://www.youtube.com/shorts/H30EErXUPLE">
+<p>Double Fisted V5</p></a>
+<a href="https://www.youtube.com/shorts/j-o0KPLUciw">
+<p>Lost V0</p></a>
+<a href="https://www.youtube.com/shorts/TPu7fUAH_2E">
+<p>Jiffy Pop V2</p></a>
+<a href="https://www.youtube.com/shorts/x0V7plrI3oY">
+<p>Puppet Master V3</p></a>
+<a href="https://www.youtube.com/shorts/0oJyp9naoAI">
+<p>Washed Out V3</p></a>
 </center>
 
  </html>
+
 
 
 
