Update problem status with future dates

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -20,14 +20,14 @@
 <h2>Problems</h2>
 <p>	Sharks Tooth	VE	</p>
 <s>	Robbins Crack	VE	(F) 1/15/26</s><br>
-<p>	Sage	VE	</p>
+<s>	Sage	VE	(F) 1/22/26 </s><br>
 <s>	Blockstar	V0	(F) 1/15/26</s><br>
 <s>	Chimney Sweep	V0	(F) 1/15/26</s><br>
-<p>	Limited Choss	V0	</p>
+<s>	Limited Choss	V0	(F) 1/22/26 </s><br>
 <s>	Gimmie Some	V0	(F) 1/9/26 </s><br>
-<p>	Book of Fun	V0	</p>
-<p>	Sunday School	V0	</p>
-<p>	Top Hat	V0	</p>
+<s>	Book of Fun	V0	(F) 1/22/26 </s><br>
+<s>	Sunday School	V0	(F) 1/22/26 </s><br>
+<s>	Top Hat	V0	(F) 1/22/26 </s><br>
 <p>	Shit, Shower, and Shave	V0	</p>
 <p>	Camel Toes	V0	</p>
 <s>	Suspended Animation	V0	(F) 1/20/26</s><br>
@@ -40,24 +40,24 @@
 <p>	The Librarian	V0	</p>
 <p>	Cowgirl Sex	V0	</p>
 <p>	Cowboy Sex	V0	</p>
-<p>	Jug Head	V0	</p>
+<s>	Jug Head	V0	(F) 1/22/26 </s><br>
 <p>	Finger Food	V0	</p>
-<p>	Leftovers	V0	</p>
+<s>	Leftovers	V0	(F) 1/22/26 </s><br>
 <p>	Tom Sawyer	V0	</p>
 <p>	31 Flavors	V0	</p>
-<p>	No Limits	V0	</p>
+<s>	No Limits	V0	(F) 1/22/26 </s><br>
 <p>	Spindrift	V0	</p>
-<p>	One Way Out	V0	</p>
+<s>	One Way Out	V0	(F) 1/22/26 </s><br>
 <p>	Honduran	V0	</p>
 <p>	Wrong Place, Wrong Time	V0	</p>
 <s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
 <p>	Nothing to it	V0	</p>
 <s>	Serpents Throne	V0	(BROKEN)</s><br>
 <p>	Nut Cracker	V0	</p>
-<p>	Frosted Flakes	V0	</p>
-<p>	Razors Edge	V0	</p>
-<p>	Outer Limits	V0	</p>
-<p>	Slick Trip	V0	</p>
+<s>	Frosted Flakes	V0	(F) 1/22/26 </s><br>
+<s>	Razors Edge	V0	(F) 1/22/26 </s><br>
+<s>	Outer Limits	V0	(F) 1/22/26 </s><br>
+<s>	Slick Trip	V0	(F) 1/22/26 </s><br>
 <p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
 <s> Tweedle Dum	V0	(F) 1/9/26 </s><br>
@@ -70,19 +70,18 @@
 <s>	Birth of Venus	V0	(F) 1/20/26</s><br>
 <s>	Tweedle Dee V1 (F) 1/9/26 </s><br>
 <p>	Schnebly Does Crack	V1	</p>
-<p>	Simple Solution	V1	</p>
+<s>	Simple Solution	V1	(F) 1/22/26 </s><br>
 <p>	Flippin the Bitch	V1	</p>
 <s>	Pinch Hitter	V1	(F) 1/15/26</s><br>
-<p>	The Gnome	V1	</p>
-<p>	Desperation Alley	V1	</p>
+<s>	The Gnome	V1	(F) 1/22/26 </s><br>
+<s>	Desperation Alley	V1	(F) 1/22/26 </s><br>
 <p>	Snap Crackle Pop	V1	</p>
-<p>	Huckleberry Thin	V1	</p>
+<s>	Huckleberry Thin	V1	(F) 1/22/26 </s><br>
 <p>	3 D's Are Better Than 2	V1	</p>
-<s>	Gaurdian Of The Canvas	V2	(F) 1/20/26</s><br>
 <s> Dilbert Unleashed	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
-<p>	Arrowhead	V1-2	</p>
-<p>	Guardian of the Canvas	V1-2	</p>
+<s>	Arrowhead	V1	(F) 1/22/26 </s><br>
 <p>	Can't Send Me to Rehab	V1-2	</p>
+<s>	Guardian Of The Canvas	V2	(F) 1/20/26</s><br>
 <s>	Tokugawa	V2	(F) 1/20/26</s><br>
 <s>	Low Rider	V2	(F) 1/15/26</s><br>
 <s>	Wanderlust V2 (F) 1/15/26</s><br>
@@ -106,21 +105,21 @@
 <p>	Contraband	V2	</p>
 <p>	Close Shave	V2	</p>
 <p>	Mother Neature	V2	</p>
-<p>	No Flakes Given	V2	</p>
+<s>	No Flakes Given	V2	(F) 1/22/26 </s><br>
 <p>	Dick Leakage	V2	</p>
 <s>	Hand Jive	V2	(2S) 1/9/26 </s><br>
 <p>	Bad Llama	V2	</p>
-<p>	Wheat Thin	V2-3	</p>
+<s>	Wheat Thin	V3	(F) 1/22/26 </s><br>
 <p>	Mindfullness	V3	</p>
 <p>	Predator	V3	</p>
 <p>	Nasal Cavity (Jump Start)	V3	</p>
 <s>	Crown of Thorns	V3	(F) 1/9/26 </s><br>
 <s>	Puppet Master	V3	1/20/26</s><br>
 <p>	White Men Don't Jump (Jump Start Right)	V3	</p>
-<p>	Two Scoops	V3	</p>
-<p>	Projected	V3	</p>
+<s>	Two Scoops	V3	(F) 1/22/26 </s><br>
+<s>	Projected	V3	(F) 1/22/26 </s><br>
 <p>	Side Salad	V3	</p>
-<p>	Trick Or Treat	V3	</p>
+<s>	Trick Or Treat	V3	(2S) 1/22/26 </s><br>
 <p>	South America V3	</p>
 <s> Washed Out V3 1/20/26</s><br>
 <s> Iguana Head V3 (F) 1/9/26 </s><br>
@@ -172,7 +171,7 @@
 <p>	Nutshell	V5	</p>
 <p>	Diamond in the Rough	V5	</p>
 <p>	Every Coyote	V5	</p>
-<p>	The Flake of Destiny	V5	</p>
+<s>	The Flake of Destiny	V5	(2S) 1/22/26 </s><br>
 <p>	Glove Knee	V5	</p>
 <p>	Clockwork Red	V5	</p>
 <p>	Undertow	V5-6	</p>
