--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -81,27 +81,34 @@
 
 <h2>Pima Canyon (1/20): 26</h2>
 <p>Tokugawa V2</p>
-<p>Planespotting V0</p>
-<p>Dragonhead V0</p>
 <p>Snake Pit V2</p>
-<p>Birth of Venus V0</p>
-<p>Supsended Animation V0</p>
 <p>Palette Knife V2</p>
-<p>Surrealism on Acid V0</p>
-<p>Studio Special V0</p>
 <p>Guardian of the Canvas V2</p>
 <p>Fisticuffs V5</p>
 <p>Double Fisted V5</p>
-<p>Lost V0</p>
 <p>Jiffy Pop V2</p>
 <p>Puppet Master V3</p>
 <p>Washed Out V3</p>
 <br>
 
-<h2>Total: 129</h2>
+<h2>Pima Canyon (1/22): 24</h2>
+<p>Simple Solution V1</p>
+<p>Desperation Alley V1</p>
+<p>Trick Or Treat V3</p>
+<p>The Flake of Destiny V5</p>
+<p>No Flakes Given V2</p>
+<p>Arrowhead V1</p>
+<p>Projected V3</p>
+<p>Two Scoops V3</p>
+<p>Wheat Thin V3</p>
+<p>Huckleberry Thin V1</p>
+<p>The Gnome V1</p>
+
+<h2>Total: 153</h2>
 
 </center>
 </html>
+
 
 
 
