Mark 'Tom Sawyer' as broken in punishertracker.html

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -43,7 +43,7 @@
 <s>	Jug Head	V0	(F) 1/22/26 </s><br>
 <p>	Finger Food	V0	</p>
 <s>	Leftovers	V0	(F) 1/22/26 </s><br>
-<p>	Tom Sawyer	V0	</p>
+<s>	Tom Sawyer	V0	(BROKEN)</s><br>
 <p>	31 Flavors	V0	</p>
 <s>	No Limits	V0	(F) 1/22/26 </s><br>
 <p>	Spindrift	V0	</p>
