Add new content and images to mastertimeline.html

--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,6 +4,10 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<img src="/images/mastergarbage/enciman.PNG" alt="logo" style="width:300px;height:316px;">
+<p>man we live in a society: "this cant be real"</p>
+<p>1/22/2026 @ 17:59</p>
+<br>
 <img src="/images/mastergarbage/dinooil.jpg" alt="logo" style="width:300px;height:400px;">
 <p>man we live in a society: "kick the vegans off the road"</p>
 <p>1/10/2026 @ 19:41</p>
@@ -68,6 +72,7 @@
 </center>
 
  </html>
+
 
 
 
