Add links to video for Pale Face V5 and General Dissaray V10

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -27,7 +27,8 @@
 <p>Humped Up V2 (F)</p>
 <p>Subway V4 (F)</p>
 <p>Redhook Torpedo V4 (F)</p>
-<p>Pale Face V5 (F)</p>
+<a href="https://www.youtube.com/watch?v=fCzFg67_t24">
+<p>Pale Face V5 (F)</p></a>
 <p>Los Dos Pacificos V3 (F)</p>
 <p>Crystal Ball V5 (F)</p>
 
@@ -38,7 +39,8 @@
 <p>Captain Stabbums V5 (S)</p>
 
 <h2>Fortress 1/18/26</h2>
-<p>General Dissaray V10 (S)</p>
+<a href="https://www.youtube.com/watch?v=vWsxkVy5nhw">
+<p>General Dissaray V10 (S)</p></a>
 <br>
 
  </center>
