Add Fortress section with keymaster details

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -43,6 +43,10 @@
 <p>General Dissaray V10 (S)</p></a>
 <br>
 
+<h2>Fortress 1/23/26</h2>
+<p>Keymaster into Skeleton Key = Skeletor V5 (S)</p>
+<br>
+
  </center>
  </html>
 
