Update V-Point Challenge details and totals

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -101,11 +101,18 @@
 <p>Wheat Thin V3</p>
 <p>Huckleberry Thin V1</p>
 <p>The Gnome V1</p>
+<br>
 
-<h2>Total: 153</h2>
+<h2>Superstitions (1/23): 5</h2>
+<p>Keymaster into Skeleton Key = Skeletor V5</p>
+<br>
+
+
+<h2>Total: 158</h2>
 
 </center>
 </html>
+
 
 
 
